--- a/404.html
+++ b/404.html
@@ -46,7 +46,7 @@
     <!-- Displaying the GIF instead of the "Oops!" text -->
     <img src="img/oops.gif" alt="Oops! GIF" class="oops-img" />
 
-    <p><a href="/">Go back to Home | jasurlive.uz</a></p>
+    <p><a href="/IELTS">🏠 Home Page</a></p>
     <p>If you are not redirected, <a href="https://jasurgraduate.github.io/IELTS">click here</a>.</p>
 </body>
 
