--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CD IELTS Preparation Website</title>
-  <meta name="description" content="CD IELTS Preparation is an online platform which provides a variety of resources for students preparing for the IELTS exam. 
+  <meta name="description" content="CD IELTS Preparation is an online platform which provides a tool for the CD IELTS exam. 
   CD IELTS WRITING, CD IELTS LISTENING & READING." />
 </head>
 
