--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
-    <meta http-equiv="refresh" content="5;url=https://jasurgraduate.github.io/IELTS"> <!-- Redirects immediately -->
+    <meta http-equiv="refresh" content="5;url=https://ieltslive.vercel.app/"> <!-- Redirects immediately -->
     <style>
         body {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -46,8 +46,8 @@
     <!-- Displaying the GIF instead of the "Oops!" text -->
     <img src="img/oops.gif" alt="Oops! GIF" class="oops-img" />
 
-    <p><a href="/IELTS">🏠 Home Page</a></p>
-    <p>If you are not redirected, <a href="https://jasurgraduate.github.io/IELTS">click here</a>.</p>
+    <p><a href="https://ieltslive.vercel.app/">🏠 Home Page</a></p>
+    <p>If you are not redirected, <a href="https://ieltslive.vercel.app/">click here</a>.</p>
 </body>
 
 </html>
