--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
-    <meta http-equiv="refresh" content="5;url=https://ieltslive.vercel.app/"> <!-- Redirects immediately -->
+    <meta http-equiv="refresh" content="5;url=https://ieltslive.vercel.app/">
     <style>
         body {
             font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -33,7 +33,6 @@
             text-decoration: underline;
         }
 
-        /* Styling for the GIF image */
         .oops-img {
             max-width: 100%;
             height: auto;
@@ -43,7 +42,6 @@
 
 <body>
     <h1>404 - Page Not Found 🔍😺</h1>
-    <!-- Displaying the GIF instead of the "Oops!" text -->
     <img src="img/oops.gif" alt="Oops! GIF" class="oops-img" />
 
     <p><a href="https://ieltslive.vercel.app/">🏠 Home Page</a></p>
